Update introduction and copyright text in index.html

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             pullBtn: "抽取小卡", breakBtn: "揭開真面目", redrawBtn: "不是本命？再抽一次",
             pullAgain: "再抽一次", shuffling: "重新洗牌中...",
             scratchHint: " (刮開看照片）",
-            nameIntro: "Hi, COER! <br>歡迎來到 Your Daily Cortis!<br>動手刮開驚喜，收藏男孩們閃耀的每一刻✨",
+            nameIntro: "Hi, COER! <br>動動手指，來開一張今天的驚喜小卡吧！✨",
             namePrompt: "在開始之前，該怎麼稱呼你呢？",
             namePlaceholder: "輸入暱稱...",
             nameBtn: "確定",
@@ -405,14 +405,14 @@
                 "✨ 每一像素都是驚喜，這張 {name} 值得 {user} 永久收藏",
                 "🥰 只要看到 {name}，{user} 的世界就被點亮了！"
             ],
-            copyright: "本網頁為 CORTIS 應援小作品，非官方發行。所有影像資源之版權均屬原經紀公司所有。本網頁僅供娛樂與技術交流使用，嚴禁任何商業行為。<br>© 2026 Your Daily CORTIS! by <a href='https://www.threads.net/@leeami0720' target='_blank' class='footer-link'>@leeami0720</a>"  
+            copyright: "本網頁為 CORTIS 應援小作品，非官方發行。所有影像資源之版權均屬原經紀公司所有。本網頁僅供娛樂與技術交流使用，嚴禁任何商業行為。© 2026 Your Daily CORTIS! by <a href='https://www.threads.net/@leeami0720' target='_blank' class='footer-link'>@leeami0720</a>"  
         },
         en: {
             title: "Your Daily CORTIS!",
             pullBtn: "Pull Card", breakBtn: "Check the look!", redrawBtn: "Not your bias? Re-pull",
             pullAgain: "Pull Again", shuffling: "Shuffling...",
             scratchHint: "(Scratch To See)", 
-            nameIntro: "Hi, COER! <br>Welcome to Your Daily CORTIS!<br>Scratch to reveal surprises and collect the boys' shining moments ✨",
+            nameIntro: "Hi, COER! <br>Ready for your daily surprise? Swipe to open your card! ✨",
             namePrompt: "Before we start, what is your name?",
             namePlaceholder: "Enter nickname...",
             nameBtn: "Let's Go",
