Update copyright information in index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!-- 
+*************************************************************************
+*  Your Daily CORTIS!
+*  Original Design & Concept by @leeami0720 (Threads)
+*  
+*  All rights reserved. 
+*  Please do not copy the copywriting and visual logic without permission.
+*************************************************************************
+-->
+
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -405,7 +415,7 @@
                 "✨ 每一像素都是驚喜，這張 {name} 值得 {user} 永久收藏",
                 "🥰 只要看到 {name}，{user} 的世界就被點亮了！"
             ],
-            copyright: "本網頁為 CORTIS 應援小作品，非官方發行。所有影像資源之版權均屬原經紀公司所有。本網頁僅供娛樂與技術交流使用，嚴禁任何商業行為。© 2026 Your Daily CORTIS! by <a href='https://www.threads.net/@leeami0720' target='_blank' class='footer-link'>@leeami0720</a>"  
+            copyright: "本網頁為 CORTIS 應援小作品，非官方發行。所有影像資源之版權均屬原經紀公司所有。本網頁僅供娛樂與技術交流使用，嚴禁任何商業行為。<br>© 2026 Your Daily CORTIS! | Original Design & Concept by <a href='https://www.threads.net/@leeami0720' target='_blank' class='footer-link'>@leeami0720</a>"
         },
         en: {
             title: "Your Daily CORTIS!",
@@ -462,7 +472,7 @@
                 "✨ Every pixel is a surprise! This {name} is a must-keep for {user}",
                 "🥰 Just seeing {name} brightens up your whole world, {user}!"
             ],
-            copyright: "This is a non-official fan-made project for entertainment only. <br>All images belong to their respective agencies. No commercial use intended.<br>© 2026 Your Daily CORTIS! by <a href='https://www.threads.net/leeami0720' target='_blank' class='footer-link'>@leeami0720</a>"
+            copyright: "This is a non-official fan-made project for entertainment only. <br>All images belong to their respective agencies. No commercial use intended.<br>© 2026 Your Daily CORTIS! | Original Design & Concept by <a href='https://www.threads.net/@leeami0720' target='_blank' class='footer-link'>@leeami0720</a>"
         }
     };
 
