Integrate Google Tag Manager in index.html
Added Google Tag Manager scripts for tracking.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4WYEJ8WQFL"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4WYEJ8WQFL');
+    </script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Your Daily CORTIS!</title>
     <style>
