Update redirect URL with UTM parameters

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <meta http-equiv="refresh" content="5;url=https://cortis-cards.vercel.app/">
+    <meta http-equiv="refresh" content="5;url=https://cortis-cards.vercel.app/?utm_source=github&utm_medium=redirect&utm_campaign=relocation">
     <title>搬家通知 | Relocation Notice - Your Daily CORTIS!</title>
     <style>
         :root {
@@ -42,7 +42,7 @@
 
         header h1 { 
             margin: 0; font-size: clamp(1.1rem, 5vw, 1.3rem); 
-            font-weight: 900; color: #bbb; /* 品牌名稍微淡化，凸顯下方的公告 */
+            font-weight: 900; color: #bbb;
             letter-spacing: -0.5px;
         }
 
@@ -57,7 +57,6 @@
             overflow: hidden;
         }
 
-        /* 標題區域：改為深色背景，極高對比 */
         .notice-header {
             background: var(--mid-grey);
             padding: 30px 20px;
@@ -66,7 +65,7 @@
 
         .notice-title-zh {
             font-weight: 900;
-            font-size: 1.4rem; /* 加大中文標題 */
+            font-size: 1.4rem;
             letter-spacing: 2px;
             margin-bottom: 5px;
             display: flex;
@@ -182,7 +181,7 @@
         </div>
 
         <div class="btn-container">
-            <a href="https://cortis-cards.vercel.app/" class="btn-primary">Go To New Site / 前往新網頁</a>
+            <a href="https://cortis-cards.vercel.app/?utm_source=github&utm_medium=redirect&utm_campaign=relocation" class="btn-primary">Go To New Site / 前往新網頁</a>
         </div>
     </main>
 
